kubecostingress (1).yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"kubernetes.io/ingress.class":"nginx","nginx.ingress.kubernetes.io/proxy-buffer-size":"64k","nginx.ingress.kubernetes.io/ssl-redirect":"false"},"name":"kubecost-ingress","namespace":"kubecost"},"spec":{"rules":[{"host":"kubecost.uniperapps.com","http":{"paths":[{"backend":{"serviceName":"kubecost-cost-analyzer","servicePort":9090},"path":null}]}}],"tls":[{"hosts":["kubecost.uniperapps.com"],"secretName":"kubecos [...]
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: 64k
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  creationTimestamp: "2020-07-27T08:51:32Z"
  generation: 2
  name: kubecost-ingress
  namespace: kubecost
  resourceVersion: "605527730"
  uid: 3d3a5769-f689-42ef-8a5b-7e6b79198740
spec:
  rules:
  - host: kubecost.uniperapps.com
    http:
      paths:
      - backend:
          service:
            name: kubecost-cost-analyzer
            port:
              number: 9090
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kubecost.uniperapps.com
    secretName: kubecostsecret
status:
  loadBalancer:
    ingress:
    - ip: 10.55.190.6
