monitoringpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"default-network-policy","namespace":"gasad-203361-prd"},"spec":{"ingress":[{"from":[{"podSelector":{}}]},{"from":[{"namespaceSelector":{"matchLabels":{"name":"ingresscontroller"}}}]}],"podSelector":{},"policyTypes":["Ingress","Egress"]}}
  creationTimestamp: "2022-07-19T09:53:38Z"
  generation: 1
  name: default-network-policy
  namespace: monitoring
  resourceVersion: "491705968"
  uid: 9af631b7-818a-404e-a829-205bf4d465fe
spec:
  ingress:
  - from:
    - podSelector: {}
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingresscontroller
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
