promedshisec1.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: DaemonSet
  metadata:
    annotations:
      deprecated.daemonset.template.generation: "1"
      meta.helm.sh/release-name: prometheus
      meta.helm.sh/release-namespace: monitoring
    creationTimestamp: "2022-10-11T13:37:36Z"
    generation: 1
    labels:
      app: prometheus
      app.kubernetes.io/managed-by: Helm
      chart: prometheus-15.15.0
      component: node-exporter
      heritage: Helm
      release: prometheus
    name: prometheus-node-exporter
    namespace: monitoring
    resourceVersion: "369579037"
    uid: 7d947382-b8b3-4789-9f2f-73b5d81e2309
  spec:
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: prometheus
        component: node-exporter
        release: prometheus
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: prometheus
          chart: prometheus-15.15.0
          component: node-exporter
          heritage: Helm
          release: prometheus
      spec:
        containers:
        - args:
          - --path.procfs=/host/proc
          - --path.sysfs=/host/sys
          - --path.rootfs=/host/root
          - --web.listen-address=:9200
          image: quay.io/prometheus/node-exporter:v1.3.1
          imagePullPolicy: IfNotPresent
          name: prometheus-node-exporter
          ports:
          - containerPort: 9200
            hostPort: 9200
            name: metrics
            protocol: TCP
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /host/proc
            name: proc
            readOnly: true
          - mountPath: /host/sys
            name: sys
            readOnly: true
          - mountPath: /host/root
            mountPropagation: HostToContainer
            name: root
            readOnly: true
        dnsPolicy: ClusterFirst
        hostNetwork: true
        hostPID: true
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext:
          fsGroup: 65534
          runAsGroup: 65534
          runAsNonRoot: true
          runAsUser: 65534
        serviceAccount: prometheus-node-exporter
        serviceAccountName: prometheus-node-exporter
        terminationGracePeriodSeconds: 30
        volumes:
        - hostPath:
            path: /proc
            type: ""
          name: proc
        - hostPath:
            path: /sys
            type: ""
          name: sys
        - hostPath:
            path: /
            type: ""
          name: root
    updateStrategy:
      rollingUpdate:
        maxSurge: 0
        maxUnavailable: 1
      type: RollingUpdate
  status:
    currentNumberScheduled: 33
    desiredNumberScheduled: 33
    numberMisscheduled: 0
    numberReady: 0
    numberUnavailable: 33
    observedGeneration: 1
    updatedNumberScheduled: 33
kind: List
metadata:
  resourceVersion: ""
